<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/green_tosca"
      android:padding="16dp"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <ImageView
          android:id="@+id/iv_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/baseline_chevron_left_24"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="ContentDescription"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:text="@string/tambah_story"
          android:textColor="@color/darkGrey"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintStart_toEndOf="@id/iv_back"
          app:layout_constraintTop_toTopOf="parent"
          />

    </androidx.constraintlayout.widget.ConstraintLayout>


  </com.google.android.material.appbar.AppBarLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        >

      <ProgressBar
          android:id="@+id/progress_bar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:visibility="gone"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          />

      <com.google.android.material.card.MaterialCardView
          android:id="@+id/cv_tambah_story"
          android:layout_width="match_parent"
          android:layout_height="250dp"
          app:cardCornerRadius="16dp"
          app:cardElevation="1dp"
          app:layout_constraintTop_toTopOf="parent"
          >

        <ImageView
            tools:ignore="ContentDescription"
            android:id="@+id/iv_tambah_story"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            />
      </com.google.android.material.card.MaterialCardView>

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btn_camera"

          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="5dp"
          android:background="@drawable/bg_image_16"
          android:backgroundTint="@color/sky_blue"
          android:text="@string/camera"
          android:textAllCaps="false"
          android:textColor="@color/darkGrey"
          app:layout_constraintEnd_toStartOf="@id/btn_gallery"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/cv_tambah_story"
          />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btn_gallery"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="5dp"
          android:layout_marginTop="16dp"
          android:background="@drawable/bg_image_16"
          android:backgroundTint="@color/brown"
          android:text="@string/gallery"
          android:textAllCaps="false"
          android:textColor="@color/darkGrey"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toEndOf="@id/btn_camera"
          app:layout_constraintTop_toBottomOf="@id/cv_tambah_story"
          />


      <EditText
          android:id="@+id/et_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_weight="1"
          android:background="@drawable/rounded_border"
          android:hint="@string/description"
          android:inputType="textCapSentences|textMultiLine"
          android:isScrollContainer="true"
          android:maxLength="2000"
          android:maxLines="10"
          android:padding="8dp"
          android:singleLine="false"
          app:layout_constraintTop_toBottomOf="@id/btn_gallery"
          />

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/btn_tambah_story"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:background="@drawable/bg_image_16"
          android:backgroundTint="@color/mustard"
          android:text="@string/tambah_story"
          android:textAllCaps="false"
          android:textColor="@color/darkGrey"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/et_description"
          />

      <TextView
          android:id="@+id/tv_error"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:background="@drawable/bg_error_message"
          android:backgroundTint="@color/gray"
          android:padding="16dp"
          android:textAlignment="center"
          android:textColor="@color/cream"
          android:textStyle="bold"
          android:visibility="gone"
          app:drawableRightCompat="@drawable/baseline_close_24"
          app:layout_constraintTop_toBottomOf="@id/btn_tambah_story"
          tools:text="Error Message"
          />

    </androidx.constraintlayout.widget.ConstraintLayout>

  </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>