<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/green_tosca"
      android:padding="16dp"
      >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

      <ImageView
          android:id="@+id/iv_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/baseline_chevron_left_24"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:ignore="ContentDescription"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="12dp"
          android:text="@string/register"
          android:textColor="@color/darkGrey"
          android:textSize="18sp"
          android:textStyle="bold"
          app:layout_constraintStart_toEndOf="@id/iv_back"
          app:layout_constraintTop_toTopOf="parent"
          />

    </androidx.constraintlayout.widget.ConstraintLayout>


  </com.google.android.material.appbar.AppBarLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingHorizontal="16dp"
      android:paddingVertical="8dp"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.madeean.storyapp2.ui.customview.NameEditText
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:id="@+id/et_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.madeean.storyapp2.ui.customview.EmailEditText
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/et_nama"
        />

    <com.madeean.storyapp2.ui.customview.PasswordEditText
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        />

    <com.madeean.storyapp2.ui.customview.Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        />

    <TextView
        android:id="@+id/info_tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/sudah_punya_akun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        />



    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/sky_blue"
        app:layout_constraintBottom_toBottomOf="@id/info_tv_login"
        app:layout_constraintStart_toEndOf="@id/info_tv_login"
        app:layout_constraintTop_toTopOf="@id/info_tv_login"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_error"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_error_message"
        tools:text="Error Message"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/info_tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableRightCompat="@drawable/baseline_close_24"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>